--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+  "name": "AI Report Generator",
+  "details": "A short description of your Power-Up",
+  "icon": {
+    "url": "https://your-icon-url.png"
+  },
+  "author": "Your Name",
+  "capabilities": [
+    "callback",
+    "card-buttons",
+    "card-badges",
+    "board-buttons",
+    "show-settings"
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "connectors": {
+    "iframe": {
+      "url": "https://glistening-choux-190890.netlify.app"
+    }
+  },
+  "check-permissions": true
 }
