--- a/package.json
+++ b/package.json
@@ -3,19 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@headlessui/react": "^1.7.15",
-    "@heroicons/react": "^2.0.18",
-    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.5",
-    "tailwindcss": "^3.3.2",
-    "web-vitals": "^4.2.1"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && cp public/_headers build/_headers",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
